migrate redux fixes #8, add z-index variables, sidebar state handling

--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -1,3 +1,9 @@
+/* THE Z */
+$z-highest:         1000;
+$z-high:             800;
+$z-normal:           600;
+
+/* SIZES */
 $menuHeight:        64px;
 $menuHeightMobile:  48px;
 $tabsHeight:        44px;
