--- a/app/sass/main/components/_header.scss
+++ b/app/sass/main/components/_header.scss
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: space-between;
     position: fixed;
+    z-index: $z-highest;
     top: 0;
     left: 0;
     right: 0;
